@@ -1,5 +1,11 @@
 *Rails 3.2.0 (unreleased)*
 
+* Limit the number of options for select_year to 1000.
+
+  Pass the :max_years_allowed option to set your own limit.
+
+  [Libo Cannici]
+
 * Passing formats or handlers to render :template and friends is deprecated. For example: [Nick Sutterer & José Valim]
 
     render :template => "foo.html.erb"
